# biodcase_2025_task1_public

./: CITATION.cff  README.md  baseline_crosscor.py  baseline_deeplearning_inference.py  baseline_deeplearning_training.py  baseline_nosync.py  beats.py  evaluate.py  lookatresults.py  models.py  pyproject.toml  requirements.txt  run_baselines.sh  utils.py
